# lab3.1

./: Makefile  README.md
os-lab/: CMakeLists.txt
os-lab/challenges/: ch10_pool.c  ch1_single_fork.c  ch2_multi_child.c  ch3_exec_ls.c  ch4_exec_worker.c  ch5_exec_examples.c  ch6_pipe_sum.c  ch7_pipeline.c  ch8_wait_nonblock.c  ch9_zombie.c  worker  worker.c
os-lab/src/: exec_demo.c  fork_demo.c  pipe_demo.c  pipeline_demo.c  zombie_demo.c
